--- a/有路网/轮播.html
+++ b/有路网/轮播.html
@@ -3,13 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<title>轮播</title>
+	<link href="reset.css" rel="stylesheet">
 	<style type="text/css">
-	body, ul, li, ol, p, dl, dd, h1, h2, h3, h4, h5, h6, img,form{
-    	margin: 0;
-    	padding: 0;
-    	list-style-type: none;
-    	border: 0;
-		}
+
 		a { color:#464646; text-decoration:none; outline: none;}
 		a:hover { color:#f60; text-decoration:underline; }
 		.lun{
@@ -17,6 +13,11 @@
 			height: 340px;
 			
 			position: relative;
+		}
+		.lun .btns{
+			position: absolute;
+			right: 8px;
+			bottom: 8px;
 		}
 		.lun .btns ul li{
 			float: left;
@@ -29,13 +30,8 @@
 			background-color: #646464;
 			color: white;
 			font-size: 12px;
-			opacity: 0.7;
-			border-radius: 20px;
-		}
-		.lun .btns{
-			position: absolute;
-			right: 8px;
-			bottom: 8px;
+			opacity: 0.8;
+			border-radius: 50%;
 		}
 
 	</style>
