--- a/有路网/搜索栏表单部分.html
+++ b/有路网/搜索栏表单部分.html
@@ -23,7 +23,7 @@
         }
 
         .searchFrame {
-            width: 400px;
+            width: 500px;
             height: 36px;
             border: 3px solid #de0304;
             position: relative;
@@ -60,6 +60,10 @@
             text-indent: 8px;
         }
 
+        .search_hot{
+            font-size: 16px;
+            padding-top: 4px;
+        }
     </style>
 </head>
 <body>
@@ -77,7 +81,13 @@
 
             </form>
         </div>
-
+        <div class="search_hot">
+            <span>热门搜索：</span>
+            <a href="" target="_blank">公务员考试</a>
+            <a href="" target="_blank">四六级</a>
+            <a href="" target="_blank">高等数学</a>
+            <a href="" target="_blank">自考</a>
+        </div>
     </div>
 </div>
 </body>
