--- a/有路网/有路网导航栏.html
+++ b/有路网/有路网导航栏.html
@@ -3,15 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<title>有路网导航栏</title>
+    <link href="reset.css" rel="stylesheet">
 	<style type="text/css">
 		/*顶部*/
-		body, ul, li, ol, p, dl, dd, h1, h2, h3, h4, h5, h6, img,form{
-    	margin: 0;
-    	padding: 0;
-    	list-style-type: none;
-    	border: 0;
-		}
-		
+
 		a { color:#464646; text-decoration:none; outline: none;}
 		a:hover { color:#f60; text-decoration:underline; }
 		.topBar{background-color:#f4f4f4;height:29px;border-bottom:1px solid #f9f9f9;line-height:29px;width:100%}
