--- a/有路网/分类.html
+++ b/有路网/分类.html
@@ -6,15 +6,6 @@
     <link href="reset.css" rel="stylesheet">
     <style type="text/css">
 
-        a {
-            color: #464646;
-            text-decoration: none;
-        }
-
-        a:hover {
-            color: #f60;
-            text-decoration: underline;
-        }
 
         .nav_bd {
             background-color: #d80000;
@@ -76,16 +67,16 @@
             text-decoration: none;
         }
 
-        .wrap_cd {
-            width: 1200px;
-            margin: 0 auto;
-        }
+        /*.wrap_cd {*/
+            /*width: 1200px;*/
+            /*margin: 0 auto;*/
+        /*}*/
 
-        .wrap_cd .helpBar {
-            height: 30px;
-            line-height: 30px;
-            margin-left: 220px;
-        }
+        /*.wrap_cd .helpBar {*/
+            /*height: 30px;*/
+            /*line-height: 30px;*/
+            /*margin-left: 220px;*/
+        /*}*/
 
 
     </style>
@@ -113,18 +104,18 @@
     </div>
 </div>
 
-<div class="wrap">
-    <div class="wrap_cd">
-        <div class="helpBar">
-            <a href="" target="_blank">如何购买</a>&nbsp;|&nbsp;<a href="" target="_blank">如何支付</a>&nbsp;|&nbsp;<a href=""
-                                                                                                               target="_blank">旧书缺货怎么办</a>&nbsp;|&nbsp;<a
-                href="" target="_blank">配送方式与配送费</a>&nbsp;|&nbsp;<a href=""
-                                                                    target="_blank">普通会员与VIP会员</a>&nbsp;|&nbsp;<a
-                href="" target="_blank">有路积分说明</a>&nbsp;|&nbsp;<a href="" target="_blank">有路礼券说明</a>&nbsp;|&nbsp;<a
-                href="" target="_blank">账户余额说明</a>&nbsp;|&nbsp;<a href="" target="_blank">退款退货说明</a>&nbsp;|&nbsp;<a
-                href="" target="_blank">电子书购买说明</a>
-        </div>
-    </div>
-</div>
+<!--<div class="wrap">-->
+    <!--<div class="wrap_cd">-->
+        <!--<div class="helpBar">-->
+            <!--<a href="" target="_blank">如何购买</a>&nbsp;|&nbsp;<a href="" target="_blank">如何支付</a>&nbsp;|&nbsp;<a href=""-->
+                                                                                                               <!--target="_blank">旧书缺货怎么办</a>&nbsp;|&nbsp;<a-->
+                <!--href="" target="_blank">配送方式与配送费</a>&nbsp;|&nbsp;<a href=""-->
+                                                                    <!--target="_blank">普通会员与VIP会员</a>&nbsp;|&nbsp;<a-->
+                <!--href="" target="_blank">有路积分说明</a>&nbsp;|&nbsp;<a href="" target="_blank">有路礼券说明</a>&nbsp;|&nbsp;<a-->
+                <!--href="" target="_blank">账户余额说明</a>&nbsp;|&nbsp;<a href="" target="_blank">退款退货说明</a>&nbsp;|&nbsp;<a-->
+                <!--href="" target="_blank">电子书购买说明</a>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
 </body>
 </html>
