--- a/有路网/有路网整体布局.html
+++ b/有路网/有路网整体布局.html
@@ -3,11 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<title>有路网整体布局</title>
+	<link href="reset.css" rel="stylesheet">
 	<style type="text/css">
-		body,div{
-			margin:0px;
-			padding: 0px;
-		}
+
 		.top1{
 			height: 31px;
 			background-color: gray;
@@ -24,10 +22,10 @@
 		.main{
 			width: 1200px;
 			margin:0px auto;
-			position: relative;
+			/*position: relative;*/
 		}
 		.main_top{
-			width: 1200px;
+			width: 990px;
 			height: 30px;
 			background-color: pink;
 			float: left;
@@ -39,9 +37,6 @@
 			height: 968px;
 			background-color: blue;
 			float: left;
-			position: absolute;
-			top: 0px;
-			
 		}
 		.main_right{
 			width: 220px;
@@ -50,14 +45,14 @@
 			float: right;
 		}
 		.d1{
-			float: right;
+			float: left;
 			width: 750px;
 			height: 340px;
 			background-color: red;
 			margin:0px 10px; 
 		}
 		.d2{
-			float: right;
+			float: left;
 			width: 750px;
 			height: 597px;
 			background-color: green;
